--- a/main.css
+++ b/main.css
@@ -6,7 +6,7 @@
 }
 
 body {
-    background: #393B45;
+    background: #FFFFFF;
     font-family: "Poppins", sans-serif;
 }
 
@@ -19,15 +19,19 @@ ol {
     list-style-position: inside;
 }
 
+ul {
+    list-style: none;
+}
+
 .header {
-    background: #6E7889;
     width: 75%;
     margin-inline: auto;
     margin-top: 50px;
     height: 100px;
-    border-radius: 15px;
     display: flex;
     flex-direction: column;
+    border: 1px solid #d1d1d1;
+    border-radius: 15px;
 }
 
 .header__top {
@@ -36,6 +40,12 @@ ol {
     align-items: center;
     padding: 0 20px;
     height: 60%;
+    background: #344A5F;
+    border-radius: 15px 15px 0 0;
+}
+
+.header__right {
+    color: #D8D9DE;
 }
 
 .header__right a {
@@ -49,7 +59,7 @@ ol {
 }
 
 .header__bottom {
-    background: #646C77;
+    background: #f4f5f6;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -71,18 +81,18 @@ ol {
     text-decoration: none;
     font-size: 18px;
     font-weight: 400;
-    color: #D8D9DE; 
+    color: #2b2b3a; 
     transition: color 0.3s;
 }
 
 .header__link.active {
-    color: #F3B54A;
-    border-bottom: 2px solid #F3B54A;
+    color: #344A5F;
+    border-bottom: 2px solid #344A5F;
     padding-bottom: 5.5px;
 }
 
 .header__link:hover {
-    color: #F3B54A;
+    color: #52697e;
 }
 
 .main__block {
@@ -94,14 +104,16 @@ ol {
 } 
 
 .main__estimation {
-    background: #6E7889;
+    background: #f4f5f6;
     border-radius: 15px;
     width: 25%;
     padding: 20px;
+    border: 1px solid #d1d1d1;
+    max-height: 158px;
 }
 
 .main__estimation-title {
-    color: #D8D9DE;
+    color: #344A5F;
     font-size: 20px;
     text-align: center;
 }
@@ -113,29 +125,19 @@ ol {
 }
 
 .main__list {
-    color: #D8D9DE;
+    color: #344A5F;
     list-style: none;
     display: flex;
-}
-
-.main__list li div {
-    display: flex;
-    justify-content: space-between;
 }
 
 .main__list li {
     padding: 10px;
 }
 
-.main__list hr {
-    width: 90%;
-    margin: auto;
-    border-color: #F3B54A;
-}
-
 .main__estimation-top {
     font-size: 30px;
-    background: #8AC054;
+    color: white;
+    background: #7ecc30;
     border-radius: 10px;
     text-align: center;
     width: 90px;
@@ -156,10 +158,11 @@ ol {
 }
 
 .main__next {
-    font-size: 35px;
-    color: #F3B54A;
+    font-size: 30px;
+    color: #344A5F;
     position: relative;
     right: 10px;
+    top: 5px;
 }
 
 .main__end {
@@ -167,20 +170,68 @@ ol {
 }
 
 .main__button {
-    color: #F3B54A;
+    color: #344A5F;
     border: none;
     background-color: transparent;
     font-size: 15px;
 }
 
 .main__class {
-    background: #6E7889;
+    background: #f4f5f6;
     border-radius: 15px;
+    border: 1px solid #d1d1d1;
     width: 40%;
+    padding: 20px;
 }
 
-.main__class {
-    
+.main__class hr {
+    opacity: 0.5;
+}
+
+.main__class-title {
+    color: #344A5F;
+    font-size: 20px;
+    text-align: center;
+}
+
+.main__class-list {
+    margin-inline: 20px;
+}
+
+.main__class-list hr {
+    width: 80%;
+    margin-inline: auto;
+}
+
+.main__class-el:not(.main__class-hr) {
+    color: #344A5F;
+    font-size: 18px;
+    font-weight: 500;
+    display: flex;
+    justify-content: space-between;
+    margin-block: 5px;
+    margin-inline: 50px;
+}
+
+.main__class-el:nth-child(n+6) {
+    display: none;
+}
+
+.main__class-el.is-visible {
+    display: flex;
+}
+
+.main__class-name p {
+    text-align: center;
+    line-height: 37px;
+    font-size: 20px;
+}
+
+.main__class-mid {
+    background: #7ecc30;
+    color: white;
+    padding: 5px 15px;
+    border-radius: 20px;
 }
 
 .main__third-block {
@@ -191,11 +242,25 @@ ol {
 }
 
 .main__highscore {
-    background: #6E7889;
+    background: #f4f5f6;
     border-radius: 15px;
+    border: 1px solid #d1d1d1;
+}
+
+.main__highscore-title {
+    color: #344A5F;
+    font-size: 20px;
+    text-align: center;
 }
 
 .main__middle-estimation {
-    background: #6E7889;
+    background: #f4f5f6;
     border-radius: 15px;
+    border: 1px solid #d1d1d1;
+}
+
+.main__middle-title {
+    color: #344A5F;
+    font-size: 20px;
+    text-align: center;
 }
