--- a/login.css
+++ b/login.css
@@ -28,16 +28,22 @@ body {
 }
 
 .main__title {
-    font-size: 40px;
-    color: #D8D9DE;
+    font-size: 30px;
+    color: white;
     background: #344A5F;
     border-radius: 15px 15px 0 0;
 }
 
-.main__desc {
-    margin-top: 20px;
-    font-size: 25px;
+.back-button {
+    text-decoration: none;
     color: #2b2b3a;
+    font-size: 20px;
+    position: absolute;
+    bottom: 715px;
+}
+
+.back-button:hover {
+    opacity: 0.8;
 }
 
 .main__inp {
@@ -72,4 +78,36 @@ body {
     border-radius: 15px;
     font-size: 20px;
     margin-top: 10px;
+}
+
+#form {
+    padding: 20px;
+}
+
+.form__title {
+    font-size: 25px;
+    color: #2b2b3a;
+}
+
+#login, #password, #button {
+    width: 50%;
+    padding: 10px;
+    margin: 5px 5px;
+    border-radius: 10px;
+    border: 1px solid silver;
+}
+ 
+#login, #password {
+    position: relative;
+    right: 3px;
+}
+
+#button {
+    cursor: pointer;
+    background: #344A5F;
+    color: white;
+}
+
+#button:hover {
+    opacity: 0.8;
 }
